recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: illegal start of simple expression
var rep:List[Int] = [l(0)::l(l.length-2)]
                    ^